--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     A Web Developer.
                 </h1>
                 <p>
-                    I'm a Dev Full Stack SSr. at AFIP with 3 years of experience in Angular/VUE/JAVA. 
+                    I'm a Dev Full Stack SSr. at AFIP with +3 years of experience in Angular/VUE/JAVA. 
                     I love to create smart and functional web web apps!                    
                 </p>
                 <div class="btn-con">
@@ -47,7 +47,7 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        Dev Full Stack SSr. at AFIP with 3 years of experience in Angular/VUE/JAVA. 
+                        Dev Full Stack SSr. at AFIP with +3 years of experience in Angular/VUE/JAVA. 
                         My first serious project was the development of a web app for a company that distributes protein products. I developed it using angular 11 and firebase.
                         My next work experience was for a government agency, where I participated on the front-end of an application using vue3, to invoice sales in a simple way.
                         Besides, in the same agency I'm currently participating in the development of a web app for inquiries and requests for procedures, regarding the issuance of receipts. I have developed several screens on the front-end using vue2 and I have developed a large part of the server side using Java 8.
@@ -81,7 +81,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">html5</p>
                         <div class="progress-con">
-                            <p class="prog-text">70%</p>
+                            <p class="prog-text">50%</p>
                             <div class="progress">
                                 <span class="html"></span>
                             </div>
@@ -90,7 +90,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">css3</p>
                         <div class="progress-con">
-                            <p class="prog-text">70%</p>
+                            <p class="prog-text">50%</p>
                             <div class="progress">
                                 <span class="css"></span>
                             </div>
