agrego memoryGame, falta foto

--- a/index.html
+++ b/index.html
@@ -198,25 +198,22 @@
                     
                     </div>
                 </div>
-                <!-- <div class="portfolio-item">
+                <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="img/memoryGame.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
+                            <a href="https://jadosfer.github.io/MemoryGame" class="icon">
+                                <p>App link</p>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
+                            <a href="https://github.com/jadosfer/MemoryGame" class="icon">
+                                <p>Repository</p>                            
                             </a>
                         </div>
                     </div>
-                </div> -->
+                </div>
                 
             </div>
         </section>
