corrijo barras porcentuales

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <div class="progress-con">
                             <p class="prog-text">60%</p>
                             <div class="progress">
-                                <span class="react"></span>
+                                <span class="angular"></span>
                             </div>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                         <div class="progress-con">
                             <p class="prog-text">50%</p>
                             <div class="progress">
-                                <span class="python"></span>
+                                <span class="java"></span>
                             </div>
                         </div>
                     </div>
