--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div class="progress-con">
                             <p class="prog-text">50%</p>
                             <div class="progress">
-                                <span class="node"></span>
+                                <span class="vue"></span>
                             </div>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                         <img src="img/distrib.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Protein products - e-commerce</h3>
                    
                             <a href="https://distrib-42bdb.web.app/" class="icon">
                                 <p>App link</p>
@@ -203,7 +203,7 @@
                         <img src="img/memoryGame.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Memory Game</h3>
                         <div class="icons">
                             <a href="https://jadosfer.github.io/MemoryGame" class="icon">
                                 <p>App link</p>
