--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </h1>
                 <p>
                     I'm a Dev Full Stack SSr. at AFIP with +3 years of experience in Angular/VUE/JAVA. 
-                    I love to create smart and functional web web apps!                    
+                    I love to create smart and functional web apps!                    
                 </p>
                 <div class="btn-con">
                     <a href="Resume_JavierFM_set2022.pdf" download="Resume_JavierFM_set2022.pdf" class="main-btn">
