corrijo margins top buttons

--- a/index.html
+++ b/index.html
@@ -403,11 +403,11 @@
     </main>
 
     <div class="controls">
-        <div style="margin:25px" class="control active-btn" data-id="home" >
+        <div style="margin-right:15px" class="control active-btn" data-id="home" >
             <i class="fas fa-home"></i>
             <p>HOME</p>
         </div>        
-        <div style="margin:25px" class="control" data-id="about">
+        <div style="margin:20px" class="control" data-id="about">
             <i class="fas fa-user"></i>
             <p>ABOUT</p>
         </div>
