--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">jan 2022 - present</p>
+                    <p class="tl-duration">january 2022 - present</p>
                     <h5>Web Developer<span> - AFIP</span></h5>
                     <p>                        
                         Development of a web app for inquiries and requests for procedures, regarding the issuance of receipts.
@@ -152,7 +152,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">set 2021 - dic 2021</p>
+                    <p class="tl-duration">september 2021 - december 2021</p>
                     <h5>Web Developer<span> - AFIP</span></h5>
                     <p>
                         Developed of some screens on the Front-End of a web app to invoice sales in an easy and fast way.
@@ -163,7 +163,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">mar 2019 - Present</p>
+                    <p class="tl-duration">august 2019 - Present</p>
                     <h5>Web Developer<span> - Gentech Mar del Plata</span></h5>
                     <p>
                         Full design and develop of an e-commerce platform for a local company.
